Fix typos in README

--- a/README
+++ b/README
@@ -6,14 +6,14 @@ and deploy them to Maven repositories.
 
 It can often be useful to work with the latest and
 greatest version of Cassandra (from trunk or a 
-release branch). Hoever, the Apache release processes
+release branch). However, the Apache release processes
 mandate certain practices around deployment which can
 make it difficult to build and deploy SNAPSHOT artifacts
 to your local Maven repository without hacking the 
 Cassandra build files. 
 
 csp works by transforming Cassandra's build.xml to 
-remove the problematic elements, replacing them with 
+remove the problematic elements, replacing them with simple
 alternatives (e.g. it replaces the sign-and-deploy-file 
 from the mvn-gpg-plugin with the regular deploy:deploy-file 
 in the deployment macro). It also skips some of the more
@@ -35,15 +35,15 @@ Usage
 
 The following options may be passed on the command line:
 
--c, --cassandra-dir : Path to the Cassandra source directory. 
-                      Defaults to the current working directory.
+-c, --cassandra-dir : Path to the Cassandra source directory.
+                      Defaults to the current working directory
 -r, --revision      : Git revision that you want to build a snapshot
                       from. Defaults to the current checked out HEAD
--v, --version       : The version # that you want to give the snapshot
+-v, --version       : The version # that you want to give the snapshot.
                       Defaults to whatever is specified in build.xml
--u, mvn-repo-url    : The URL of the Maven repo where you intend to 
+-u, --repo-url    	: The URL of the Maven repo where you intend to 
                       publish the snapshot artifacts
--i, mvn-repo-id     : The identifier of the target repo from your 
+-i, --repo-id     	: The identifier of the target repo from your 
                       Maven settings.xml 
 
 Of these options, the Cassandra source directory and the Maven repo
